Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16359

wrong result (extra rows) on the query with UNION and brackets

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL)
    • 10.4.0
    • Parser
    • None

    Description

      MariaDB [test]> (select 1) union (select 1) union (select 1);
      +---+
      | 1 |
      +---+
      | 1 |
      +---+
      1 row in set (0.000 sec)
       
      MariaDB [test]> ((select 1) union (select 1) union (select 1));
      +---+
      | 1 |
      +---+
      | 1 |
      | 1 |
      +---+
      2 rows in set (0.000 sec)
      
      

      Attachments

        Issue Links

          Activity

            People

              igor Igor Babaev (Inactive)
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.