MDEV-16359 wrong result (extra rows) on the query with UNION and brackets

Due to an obvious bug in st_select_lex_unit::reset_distinct() a union
without duplicates of more than 2 selects could return a result set
containing duplicate rows if this union was enclosed in ().